<resources>
    <string name="app_name">login and signup with firebase</string>
    <string name="welcome">welcome</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign-up</string>
    <string name="did_you_forgot_your_password">Did you forgot your password ?</string>
    <string name="sign_in">Sign-In</string>
    <string name="name" />
    <string name="Name">Name</string>
    <string name="your_e_mail">Your E-mail</string>
    <string name="repeat_password">Repeat_password</string>
    <string name="Repeat_Password">Repeat_Password</string>
    <string name="write_your_notes_here">Write your notes here.</string>
    <string name="enter_your_title">Enter your title</string>
    <string name="enter_your_discription">Enter your discription</string>
</resources>